[package]
name = "gmod-wstool"
version = "0.1.6"
edition = "2024"
repository = "https://github.com/Srlion/gmod-wstool"
authors = ["Srlion <srlion32@gmail.com>"]
description = "A tool for managing Garry's Mod workshop addons"
license = "MIT"

[dependencies]
arc-swap = "1.9.1"
atomic_enum = "0.3.0"
cap-std = "4.0.2"
eframe = { version = "0.34.3", features = ["persistence"] }
egui = "0.34.3"
egui_extras = { version = "0.34.3", features = ["all_loaders"] }
egui-notify = "0.22.0"
egui_virtual_list = "0.10.0"
gma-lite = "0.3.4"
image = { version = "0.25", features = ["jpeg", "png"] }
lzma-rust2 = "0.16.3"
open = "5.3.5"
rfd = "0.17.2"
serde_json = "1.0.150"
steamworks = { version = "0.12", features = ["image", "serde"] }
ureq = "3.3.0"
wildmatch = "2.6.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
